Fix dl-horizontal dt text-overflow

--- a/geonode/static/geonode/less/base.less
+++ b/geonode/static/geonode/less/base.less
@@ -56,6 +56,12 @@ a {
 h1, h2, h3, h4, h5, h6 {
   font-weight: @headings-font-weight;
 }
+.dl-horizontal dt {
+  text-overflow: clip;
+  white-space: normal;
+  overflow: hidden;
+}
+
 #wrap {
   background: @body-bg;
   padding-bottom: 40px;
@@ -69,7 +75,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-right: 8px;
 }
 article.tab-pane {
-  padding: 20px;
+  padding: 20px 0;
 }
 /* Header
 ----------------------- */
